@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(configure.in)
 
-AM_INIT_AUTOMAKE(synaptic, 0.57.8)
+AM_INIT_AUTOMAKE(synaptic, 0.57.12)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
