@@ -6,16 +6,16 @@
 
 PKG=synaptic
 DEBVER=$(shell dpkg-parsechangelog |sed -n -e '/^Version:/s/^Version: //p')
-CONFVER=$(shell  sed -n -e 's/AM_INIT_AUTOMAKE($PKG, \(.*\))/\1/p' configure.in)
+CONFVER=$(shell  sed -n -e 's/AM_INIT_AUTOMAKE(synaptic, \(.*\))/\1/p' configure.in)
 DEB_BUILD_PROG:=debuild --preserve-envvar PATH --preserve-envvar CCACHE_DIR -us -uc $(DEB_BUILD_PROG_OPTS)
 
 
 # Rebuild configure.in to have the correct version from the change log
-ifneq ($(S_DEBVER),$(S_CONFVER))
-ifneq ($(S_DEBVER),)
+ifneq ($(DEBVER),$(CONFVER))
+ifneq ($(DEBVER),)
 .PHONY: configure.in
 configure.in:
-	sed -ie 's/$(S_CONFVER)/$(S_DEBVER)/' $@ 
+	sed -ie 's/$(CONFVER)/$(DEBVER)/' $@ 
 endif
 else
 configure.in:
