@@ -18,6 +18,8 @@ synaptic (0.57.12) UNRELEASED; urgency=low
   * added support for GUI configuraton of http proxy
   * translation updates:
     - cs.po: thanks to Vít Pelcak
+  * debian/rules: 
+    - fix automatic version number generation
   * make description buffer dynamic (thanks to Benjamin Jacobs)
   * added component filter
   * added emblem in the description to show support status
